[package]
name = "onesol-protocol"
version = "0.3.1"
authors = ["croath <croathliu@gmail.com>"]
edition = "2018"
exclude = ["js/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.8.3"
thiserror = "1.0"
arrayref = "0.3.6"
num-derive = "0.3.3"
num-traits = "0.2.14"
num_enum = "0.5.0"
num = "0.4.0"
safe-transmute = "0.11.0"
bytemuck = { version = "1.4.0" }
enumflags2 = "0.7.1"
spl-token = { version = "3.2.0", features = ["no-entrypoint"]}
serum_dex = { version = "0.4.0", features = ["client", "no-entrypoint"]} 
stable-swap-client = "1.5.2"


[dev-dependencies]
solana-sdk = "1.8.3"
bs58 = "*"

[lib]
crate-type = ["cdylib", "lib"]
doctest = false


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
